feat: delete all tokens api
