# docs/swagger.json
@@ -151,6 +151,22 @@
                     }
                 }
             }
+        },
+        "/users/push-tokens/_all": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Delete all tokens of a user",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -233,6 +249,9 @@
                 "token": {
                     "type": "string",
                     "maxLength": 64
+                },
+                "updated_at": {
+                    "type": "string"
                 },
                 "user_id": {
                     "description": "not required",
